--- a/style.css
+++ b/style.css
@@ -12,14 +12,17 @@ body {
 .header {
   display: flex;
   align-items: baseline;
-  justify-content: space-around;
+  justify-content: space-between;
+  width: 100%;
   min-width: 80%;
-  margin-bottom: 4rem;
+  /* margin-bottom: 4rem; */
+  grid-column: 1/4;
 }
 h1 {
   font-family: "PT Serif", serif;
   font-size: 36px;
   font-weight: 700;
+  margin: 0;
 }
 h2 {
   font-size: 18px;
@@ -42,12 +45,12 @@ p {
 }
 
 .container div:nth-of-type(2n) {
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
   }
 
 
 .salido {
-  /* margin-top: 5rem; */
+  margin-top: 5rem;
 }
 .card {
 }
@@ -72,4 +75,32 @@ p {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
   font-weight: 600;
+}
+
+@media (max-width: 1200px) {
+
+  .container {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 2rem;
+  }
+  .salido {
+    margin-top: 0;
+  }
+
+  .container div:nth-of-type(2n) {
+    margin-top: 5rem;
+  } 
+  .header {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    width: 100%;
+    min-width: 80%;
+    /* margin-bottom: 4rem; */
+    grid-column: 1/3;
+    flex-direction: column;
+    gap: 3rem;
+  }
+  
 }
